# timeline

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  waveformview.cpp  waveformview.h
dzialajace ui/: mainwindow.ui
